# jax-lfvm

./: README.md
11dof-gpu/: CMakeLists.txt  check_outs.py  csvwriter.h  launch_managed.cu  rom.cu  rom.cuh
11dof-gpu/jsons/: HMMWV.json  dART.json
11dof-gpu/outs/: test_set2_mod.csv  test_set2_modCut.csv
18dof/: CMakeCache.txt
18dof/data/reference/: ART_acc3.csv  acc38.csv
4dof/: 4dof-jax.py  4dof.py  4dof_cpu.py
jax/: 4dof.py  VehicleParams.py  VehicleState.py  veh.py
jax/data/: acc3.txt
